WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31559
Crash when accessing webkitTransition property after setting webkitTransitionProperty with invalid value.
https://bugs.webkit.org/show_bug.cgi?id=31559
Summary
Crash when accessing webkitTransition property after setting webkitTransition...
Matt Pennig
Reported
2009-11-16 09:41:06 PST
Scenario: 1) Get an element with CSS property -webkit-transition applied, or set it using JavaScript. 2) Set webkitTransitionProperty to some invalid value 3) Access webkitTransition property. See attachment for reduction.
Attachments
Reduction (WARNING: Will crash Safari/WebKit)
(40 bytes, text/plain)
2009-11-16 09:43 PST
,
Matt Pennig
no flags
Details
Testcase
(248 bytes, text/html)
2009-12-16 12:44 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.37 KB, patch)
2009-12-18 16:17 PST
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Matt Pennig
Comment 1
2009-11-16 09:43:32 PST
Created
attachment 43311
[details]
Reduction (WARNING: Will crash Safari/WebKit)
Simon Fraser (smfr)
Comment 2
2009-12-16 12:42:43 PST
<
rdar://problem/7477760
>
Simon Fraser (smfr)
Comment 3
2009-12-16 12:44:10 PST
Created
attachment 45007
[details]
Testcase
Simon Fraser (smfr)
Comment 4
2009-12-18 16:17:52 PST
Created
attachment 45199
[details]
Patch
Simon Fraser (smfr)
Comment 5
2009-12-18 16:23:06 PST
http://trac.webkit.org/changeset/52354
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug