2009-12-18  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler.

        Crash when accessing webkitTransition property after setting webkitTransitionProperty with invalid value.
        https://bugs.webkit.org/show_bug.cgi?id=31559

        Fix an array bounds error when accessing the CSS value for a shorthand property that takes
        a comma-separated list, after the list for one of the component properties has been set to a different length.

        Test: fast/css/shorthand-mismatched-list-crash.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::getLayeredShorthandValue):

Canonical link: https://commits.webkit.org/43776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52354 268f45cc-cd09-0410-ab3c-d52691b4dbfc